--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -86,12 +86,14 @@
   <ItemGroup>
     <Compile Include="Assets\scripts\DestroyOnBoolNotReset.cs" />
     <Compile Include="Assets\scripts\Director.cs" />
+    <Compile Include="Assets\scripts\Game\Items\Items.cs" />
+    <Compile Include="Assets\scripts\Game\Items\Weapons.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Map.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Terrain.cs" />
     <Compile Include="Assets\scripts\Game\Managers\TacticsBehaviour.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\Character.cs" />
+    <Compile Include="Assets\scripts\Game\Unit Related\CombatStats.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\RPGClass.cs" />
-    <Compile Include="Assets\scripts\Game\Unit Related\Weapons.cs" />
     <Compile Include="Assets\scripts\Selector.cs" />
     <Compile Include="Assets\scripts\movementManager.cs" />
     <Compile Include="Assets\scripts\preventOverlap.cs" />
