--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -90,7 +90,11 @@
     <Compile Include="Assets\scripts\Game\Items\Weapons.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Map.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Terrain.cs" />
+    <Compile Include="Assets\scripts\Game\Managers\CombatManager.cs" />
+    <Compile Include="Assets\scripts\Game\Managers\InputManager.cs" />
+    <Compile Include="Assets\scripts\Game\Managers\LevelManager.cs" />
     <Compile Include="Assets\scripts\Game\Managers\TacticsBehaviour.cs" />
+    <Compile Include="Assets\scripts\Game\Managers\TurnManager.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\Character.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\CombatStats.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\RPGClass.cs" />
