Finished Level Manager (mostly)
I've done as much as I can with the level manager.

Now I need to revamp the combat manager before coming back to finish one
of the big chunks left in it.

Then I need to work on the turn manager so I can have a game loop.

After that it's Input Manager, but Unity's works fine for now. I just
need to not rely on it since Inputs can't be changed at run time (which
means building my own).

--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -84,11 +84,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\scripts\DestroyOnBoolNotReset.cs" />
-    <Compile Include="Assets\scripts\Director.cs" />
     <Compile Include="Assets\scripts\Game\Items\Items.cs" />
     <Compile Include="Assets\scripts\Game\Items\Weapons.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Map.cs" />
+    <Compile Include="Assets\scripts\Game\Level Related\Selector.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Terrain.cs" />
     <Compile Include="Assets\scripts\Game\Managers\CombatManager.cs" />
     <Compile Include="Assets\scripts\Game\Managers\InputManager.cs" />
@@ -98,16 +97,18 @@
     <Compile Include="Assets\scripts\Game\Unit Related\Character.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\CombatStats.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\RPGClass.cs" />
-    <Compile Include="Assets\scripts\Selector.cs" />
-    <Compile Include="Assets\scripts\movementManager.cs" />
-    <Compile Include="Assets\scripts\preventOverlap.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\DestroyOnBoolNotReset.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\Director.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\preventOverlap.cs" />
     <Compile Include="Assets\scripts\scratch\ArrayLayout.cs" />
     <Compile Include="Assets\scripts\scratch\GridMap.cs" />
     <Compile Include="Assets\scripts\scratch\LevelInfo.cs" />
+    <Compile Include="Assets\scripts\scratch\SelectorScratch.cs" />
     <Compile Include="Assets\scripts\scratch\combatManager.cs" />
     <Compile Include="Assets\scripts\scratch\displayWorldPosition.cs" />
     <Compile Include="Assets\scripts\scratch\getUnitInfo.cs" />
     <Compile Include="Assets\scripts\scratch\mapConstructor.cs" />
+    <Compile Include="Assets\scripts\scratch\movementManager.cs" />
     <Compile Include="Assets\scripts\scratch\templateClass.cs" />
     <Compile Include="Assets\scripts\scratch\templateClass02.cs" />
     <Compile Include="Assets\scripts\scratch\templateTerrain.cs" />
