--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -95,12 +95,12 @@
     <Compile Include="Assets\scripts\Game\Managers\TacticsBehaviour.cs" />
     <Compile Include="Assets\scripts\Game\Managers\TurnManager.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\Character.cs" />
-    <Compile Include="Assets\scripts\Game\Unit Related\CombatStats.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\RPGClass.cs" />
     <Compile Include="Assets\scripts\Game\Utility\DestroyOnBoolNotReset.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Director.cs" />
     <Compile Include="Assets\scripts\Game\Utility\preventOverlap.cs" />
     <Compile Include="Assets\scripts\scratch\ArrayLayout.cs" />
+    <Compile Include="Assets\scripts\scratch\CombatStats2.cs" />
     <Compile Include="Assets\scripts\scratch\GridMap.cs" />
     <Compile Include="Assets\scripts\scratch\LevelInfo.cs" />
     <Compile Include="Assets\scripts\scratch\SelectorScratch.cs" />
