--- a/Dankest Embl3m/Dankest Embl3m.Editor.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.Editor.csproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\Editor\CustomArrayPropertyDrawer.cs" />
+    <Compile Include="Assets\scripts\Editor\EnumFlagsAttributeDrawer.cs" />
     <Compile Include="Assets\scripts\Editor\MapEditor.cs" />
     <Compile Include="Assets\scripts\Editor\ReadOnlyAttribute.cs" />
   </ItemGroup>
