Fixed Range Indicators and Adjusted Sprites

--- a/Dankest Embl3m/Dankest Embl3m.Editor.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.Editor.csproj
@@ -137,6 +137,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\scripts\Editor\CharacterEditor.cs" />
     <Compile Include="Assets\scripts\Editor\CustomArrayPropertyDrawer.cs" />
     <Compile Include="Assets\scripts\Editor\EnumFlagsAttributeDrawer.cs" />
     <Compile Include="Assets\scripts\Editor\MapEditor.cs" />
