--- a/Dankest Embl3m/Dankest Embl3m.Editor.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.Editor.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Assets\scripts\Editor\ReadOnlyAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\PixelPerfectCamera\README.txt" />
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
