--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -84,6 +84,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\PixelPerfectCamera\Scripts\CanvasScreenSpaceScaler.cs" />
+    <Compile Include="Assets\PixelPerfectCamera\Scripts\CanvasWorldScaler.cs" />
+    <Compile Include="Assets\PixelPerfectCamera\Scripts\Internal\VectorSwizzleExtensions.cs" />
+    <Compile Include="Assets\PixelPerfectCamera\Scripts\PixelPerfectCamera.cs" />
+    <Compile Include="Assets\PixelPerfectCamera\Scripts\PixelSnap.cs" />
+    <Compile Include="Assets\PixelPerfectCamera\Scripts\Scroller.cs" />
     <Compile Include="Assets\scripts\Game\Items\Items.cs" />
     <Compile Include="Assets\scripts\Game\Items\Weapons.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Map.cs" />
@@ -122,6 +128,7 @@
     <Compile Include="Assets\scripts\scratch\unitController03.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\PixelPerfectCamera\README.txt" />
     <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
     <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
