--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Assets\scripts\Game\Utility\EnumFlagsAttribute.cs" />
     <Compile Include="Assets\scripts\Game\Utility\getTileInfo.cs" />
     <Compile Include="Assets\scripts\Game\Utility\getUnitInfo.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\getUnitInfoAdvanced.cs" />
     <Compile Include="Assets\scripts\Game\Utility\preventOverlap.cs" />
     <Compile Include="Assets\scripts\scratch\ArrayLayout.cs" />
     <Compile Include="Assets\scripts\scratch\CombatStats2.cs" />
