Added Combat Information Menu
There's now a combat info menu that pops up when the player selects a
unit for combat. It's missing the number of times a unit will attack,
but other than that has everything.

The new menu caused some bugs with the state machine. I'll have to go
back and fix them or else the player will get stuck in a 'combat loop'.

--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Assets\scripts\Game\Utility\DestroyOnBoolNotReset.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Director.cs" />
     <Compile Include="Assets\scripts\Game\Utility\EnumFlagsAttribute.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\getCombatInfo.cs" />
     <Compile Include="Assets\scripts\Game\Utility\getTileInfo.cs" />
     <Compile Include="Assets\scripts\Game\Utility\getUnitInfo.cs" />
     <Compile Include="Assets\scripts\Game\Utility\getUnitInfoAdvanced.cs" />
