Preliminary Injury System
Created the first bit of an injury system. Right now all it does is give
stat penalties for each injury gained. It's very rough around the edges
but it does alieviate the problem of important units dying outright from
random chance.

--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -97,8 +97,10 @@
     <Compile Include="Assets\scripts\Game\Managers\TurnManager.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\Character.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\FlyingUnit.cs" />
+    <Compile Include="Assets\scripts\Game\Unit Related\Injury.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\MountedUnit.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\RPGClass.cs" />
+    <Compile Include="Assets\scripts\Game\Unit Related\Trait.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Animator2D.cs" />
     <Compile Include="Assets\scripts\Game\Utility\DestroyOnBoolNotReset.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Director.cs" />
