--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Assets\scripts\Game\Unit Related\RPGClass.cs" />
     <Compile Include="Assets\scripts\Game\Unit Related\Trait.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Animator2D.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\Commands\Command.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\Commands\MoveCommands.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\Commands\ZoomCommand.cs" />
     <Compile Include="Assets\scripts\Game\Utility\DestroyOnBoolNotReset.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Director.cs" />
     <Compile Include="Assets\scripts\Game\Utility\EnumFlagsAttribute.cs" />
