--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Assets\scripts\Game\Unit Related\Trait.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Animator2D.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Commands\Command.cs" />
-    <Compile Include="Assets\scripts\Game\Utility\Commands\MoveCommands.cs" />
+    <Compile Include="Assets\scripts\Game\Utility\Commands\MoveCommand.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Commands\ZoomCommand.cs" />
     <Compile Include="Assets\scripts\Game\Utility\DestroyOnBoolNotReset.cs" />
     <Compile Include="Assets\scripts\Game\Utility\Director.cs" />
