--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AudioClipToLoop.cs" />
     <Compile Include="Assets\CloseGame.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\CanvasScreenSpaceScaler.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\CanvasWorldScaler.cs" />
