--- a/Dankest Embl3m/Dankest Embl3m.csproj
+++ b/Dankest Embl3m/Dankest Embl3m.csproj
@@ -78,15 +78,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AudioClipToLoop.cs" />
-    <Compile Include="Assets\CloseGame.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\CanvasScreenSpaceScaler.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\CanvasWorldScaler.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\Internal\VectorSwizzleExtensions.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\PixelPerfectCamera.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\PixelSnap.cs" />
     <Compile Include="Assets\misc\PixelPerfectCamera\Scripts\Scroller.cs" />
+    <Compile Include="Assets\scripts\AudioClipToLoop.cs" />
     <Compile Include="Assets\scripts\changeTex.cs" />
+    <Compile Include="Assets\scripts\CloseGame.cs" />
     <Compile Include="Assets\scripts\Game\Items\Items.cs" />
     <Compile Include="Assets\scripts\Game\Items\Weapons.cs" />
     <Compile Include="Assets\scripts\Game\Level Related\Map.cs" />
@@ -136,7 +136,7 @@
     <Compile Include="Assets\scripts\scratch\unitController02.cs" />
     <Compile Include="Assets\scripts\scratch\unitController03.cs" />
     <Compile Include="Assets\scripts\StartGame.cs" />
-    <Compile Include="Assets\versionNumber.cs" />
+    <Compile Include="Assets\scripts\versionNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\misc\PixelPerfectCamera\README.txt" />
